hotfixes with button, add ul li list instead div blocks, change height of form field and button

--- a/src/partials/button/button.hbs
+++ b/src/partials/button/button.hbs
@@ -1,5 +1,5 @@
 
 <a href="{{link}}">
-    <div class="button {{buttonClass}}">{{buttonText}}</div>
+    <button type = "button" class="button {{buttonClass}}">{{buttonText}}</button>
 </a>
 
