--- a/src/partials/messenger/chatItem/chatItem.hbs
+++ b/src/partials/messenger/chatItem/chatItem.hbs
@@ -1,5 +1,5 @@
-<div class="messenger__chat_item">
+<li class="messenger__chat_item">
     {{> avatar/avatar}}
     {{> messenger/lastMessageBrief/lastMessageBrief}}
     {{> messenger/lastMessageStatus/lastMessageStatus}}
-</div>
+</li>
