--- a/src/partials/messenger/chatList/chatList.hbs
+++ b/src/partials/messenger/chatList/chatList.hbs
@@ -1,6 +1,6 @@
- <div class="messenger__chat_list">
+ <ul class="messenger__chat_list">
     {{#each chatItems}}
         {{> messenger/chatItem/chatItem this}}
     {{/each}}
-</div>
+</ul>
 
