--- a/src/partials/messenger/messageRow/messageRow.hbs
+++ b/src/partials/messenger/messageRow/messageRow.hbs
@@ -1,5 +1,5 @@
 
-    <div class="message_window__message_row {{isBuddyRow sender}}">
+    <li class="message_window__message_row {{isBuddyRow sender}}">
         {{> messenger/message/message}}
-    </div>
+    </li>
 
