added upload avatar input, fixed exiting edit profile form, fixed style

--- a/src/partials/edit-profile/profileFormWithEditing/profileFormWithEditing.hbs
+++ b/src/partials/edit-profile/profileFormWithEditing/profileFormWithEditing.hbs
@@ -1,4 +1,5 @@
 <form class="edit_profile__profile_form_with_editing">
+        {{> uploadAvatar/uploadAvatar}}
         {{> registration/emailField/emailField}}
         {{> login/loginField/loginField}}
         {{> registration/firstNameField/firstNameField}}
